--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MadForumApp</string>
+    <string name="logoTitle">qExpert</string>
     <string name="user_name">Username</string>
     <string name="user_password">Password</string>
     <string name="forgot_password">Forgot Password ?</string>
@@ -20,6 +21,19 @@
     <string name="backButton">Back</string>
     <string name="nextButton">Next</string>
     <string name="signInButton">Sign In</string>
+
+
+    <!-- image descriptions -->
+    <string name="profilePicDescription">This is the profile picture</string>
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="search">Search</string>
+    <string name="nav_question">Ask</string>
+    <string name="nav_feedback">Feedback</string>
+    <string name="nav_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--
     <string name="title_activity_login">Sign in</string>
