--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,7 @@
 <resources>
     <string name="app_name">MadForumApp</string>
     <string name="logoTitle">qExpert</string>
-    <string name="user_name">Username</string>
-    <string name="user_password">Password</string>
-    <string name="forgot_password">Forgot Password ?</string>
-    <string name="create">No account yet? Create one</string>
+
 
     <string name="titile1">What is <i>qExpert</i> ?</string>
     <string name="specialWord1">qExpert ?</string>
@@ -46,17 +43,32 @@
     <string name="ask_description_hint">Describe your question as clearly as possible</string>
     <string name="ask_post_button">Post</string>
 
-    <!--
-    <string name="title_activity_login">Sign in</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <string name="facebook_app_id">473937503427813</string>
-    <string name="fb_login_protocol_scheme">fb473937503427813</string> -->
+
+    <!-- vidula strings-->
+
+    <string name="user_name">Username</string>
+    <string name="user_password">Password</string>
+    <string name="forgot_password">Forgot Password ?</string>
+    <string name="create">No account yet? Create one</string>
+    <string name="reset">Reset Password</string>
+    <string name="conf_password">Confirm Password</string>
+    <string name="forgot_your_password">Forgot your password?</string>
+    <string name="enter_email">Enter Your Email</string>
+    <string name="self_register">Register Yourself !</string>
+    <string name="secure">100% secure</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="email_enter">Enter Email</string>
+    <string name="password_enter">Enter Password</string>
+    <string name="password_reenter">Re-enter Password</string>
+    <string name="already_user">Already an user? Click to sign In</string>
+    <string name="conditions">Agree to terms and conditions</string>
+    <string name="prsnl_prof">Personal Profile</string>
+    <string name="nam">Name</string>
+    <string name="show_feedback">Show My Feedback</string>
+    <string name="proceed_feedback">Proceed to Dashboard</string>
+    <string name="editdetails_btn">Edit Details</string>
+    <string name="deleteAcc_btn">Delete Account</string>
+    <string name="signout_btn">Sign Out</string>
+
 
 </resources>
