add new ui user reply dash and notification dash

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,16 @@
     <string name="editdetails_btn">Edit Details</string>
     <string name="deleteAcc_btn">Delete Account</string>
     <string name="signout_btn">Sign Out</string>
+    <string name="title_activity_show_reply">showReply</string>
+    <string name="postdashbord">Post Contain</string>
+    <string name="replyone">reply one text</string>
+    <string name="editbtntext">Edit</string>
+    <string name="deletereplbtn">Delete</string>
+    <string name="title_activity_user_activitydashbord">UserActivitydashbord</string>
+    <string name="replydetails">Number of Reply</string>
+    <string name="urflows">Your Followers</string>
+    <string name="notfidetails">Your Notification</string>
 
-
+    <!-- sathira -->
+    <!---->
 </resources>
