--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,8 @@
     <string name="update_post">Update</string>
     <string name="edit_reply_headline">Edit Reply</string>
     <string name="title_activity_user_dashbord">UserDashbordActivity</string>
+    <string name="reply_hint">Add an answer</string>
+    <string name="add_reply">Add</string>
 
 
 </resources>
